# IID_validation

./: .gitignore  README.md  conf.toml  main.py  main_parallelized.py  permutation_tests.py  pyproject.toml  requirements.txt  statistical_analysis.py  update_venv.sh
.github/workflows/: black.yml  flake8.yml  isort.yml
iid_validation/: __main__.py  config.py  iid_test.py  min_entropy.py  permutation_tests.py  plot.py  save.py  statistical_analysis.py
statistical_analysis/: comparison_counters_FyR.py  counters_FYShuffle_TjNorm.py  counters_FYShuffle_Tx.py  counters_Random_TjNorm.py  counters_Random_Tx.py
tests/: compression.py  covariance.py  excursion_test.py  periodicity.py  smoke_test.py
tests/collision/: avg_collision.py  max_collision.py
tests/runs/: l_directional_runs.py  l_runs_median.py  n_increases_decreases.py  n_of_directional_runs.py  n_runs_median.py
utils/: config.py  plot.py  read.py  save.py  shuffles.py  time_monitor_function.py  useful_functions.py
